<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.adama</groupId>
	<artifactId>proyectoWebBase</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>

	<name>Generador de números aleatorios</name>
	<url>https://${repository.domain}/${repository.user}/${repository.name}</url>

	<organization>
		<name>Adama Consulting</name>
		<url>www.adamaconsulting.es</url>
	</organization>
	<description>Aplicación simple para mostrar el uso de Maven en acción cambiando el logger por slf4j.</description>

	<developers>
		<developer>
			<name>David</name>
			<organization>Adama consulting</organization>
			<organizationUrl>http://www.adamaconsulting.es</organizationUrl>
			<email>desarrollador@adamaconsulting.es</email>
			<timezone>UTC+1</timezone>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>
	<properties>
		<!-- dependencias -->
		<spring.version>4.0.3.RELEASE</spring.version>
		<!-- entorno -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.args>-Xms256m -Xmx512m -XX:MaxPermSize=512m</java.args>
		<!-- plugins -->
		<plugin.javadoc>2.10.3</plugin.javadoc>
		<plugin.compiler>3.1</plugin.compiler>
		<plugin.surefire>2.18.1</plugin.surefire>

		<plugin.surefire.report>2.18.1</plugin.surefire.report>
		<plugin.jxr>2.5</plugin.jxr>
		<plugin.cobertura>2.7</plugin.cobertura>
		<plugin.checkstyle>2.15</plugin.checkstyle>
		<plugin.taglist>2.4</plugin.taglist>
		<changelog.fileUri>${project.scm.url}/tree/master/%FILE%</changelog.fileUri>
		<changelog.revision.fileUri>${project.scm.url}/commit</changelog.revision.fileUri>
		<plugin.changelog>2.3</plugin.changelog>
		<plugin.site>3.4</plugin.site>
		<scmPublish.checkoutDirectory>${project.build.directory}/scmpublish</scmPublish.checkoutDirectory>
		<repository.domain>github.com</repository.domain>
		<repository.user>dicotraining</repository.user>
		<repository.name>testing</repository.name>
		<scm-publish.scmBranch>gh-pages</scm-publish.scmBranch>
		<scm-publish.pubScmUrl>scm:git:git@github.com:dicotraining/testing.git</scm-publish.pubScmUrl>
		<scm-publish.siteDocOutputdirectory>${project.reporting.outputDirectory}</scm-publish.siteDocOutputdirectory>
		<plugin.scm-publish>1.0</plugin.scm-publish>
	</properties>

	<scm>
		<connection>scm:git:ssh://${repository.domain}/${repository.user}/${repository.name}.git</connection>
		<developerConnection>scm:git:ssh://${repository.domain}/${repository.user}/${repository.name}.git</developerConnection>
		<url>https://${repository.domain}/${repository.user}/${repository.name}</url>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<url>https://${repository.domain}/${repository.user}/${repository.name}/issues</url>
		<system>Github issues</system>
	</issueManagement>
	<build>
	<extensions>
		<extension>
			<groupId>org.apache.maven.wagon</groupId>
			<artifactId>wagon-ssh</artifactId>
			<version>2.2</version>
		</extension>
		<extension>
			<groupId>org.apache.maven.wagon</groupId>
			<artifactId>wagon-webdav-jackrabbit</artifactId>
			<version>1.0</version>
		</extension>
	</extensions>
		<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-scm-publish-plugin</artifactId>
			<version>${plugin.scm-publish}</version>	
			<configuration>
				<checkoutDirectory>${scmPublish.checkoutDirectory} </checkoutDirectory>
				<checkinComment>Publishing site docs for ${project.artifactId}:${project.version} </checkinComment>
				<content>${scm-publish.siteDocOutputdirectory}</content>
				<skipDeleteFiles>true</skipDeleteFiles>
				<pubScmUrl>${scm-publish.pubScmUrl} </pubScmUrl>
				<scmBranch>${scm-publish.scmBranch} </scmBranch>
			</configuration>			
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-site-plugin</artifactId>
			<version>${plugin.site}</version>
			<dependencies>
				<dependency>
					<groupId>org.apache.maven.doxia</groupId>
					<artifactId>doxia-module-markdown</artifactId>
					<version>1.6</version>
				</dependency>
			</dependencies>
			<configuration>
				<attach>true</attach>
			</configuration>
			<executions>
				<execution>
				
					<id>attach-descriptor</id>
					<goals>
						<goal>attach-descriptor</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${plugin.surefire}</version>
				<configuration>
					<argLine>${java.args}</argLine>
					<failIfNoTests>false</failIfNoTests>

				</configuration>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${plugin.compiler}</version>
				<configuration>
					<verbose>false</verbose>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${plugin.javadoc}</version>
				<configuration>
					<minmemory>256m</minmemory>
					<maxmemory>1g</maxmemory>
					<failOnError>false</failOnError>
					<encoding>ISO-8859-1</encoding>
				</configuration>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<!-- Esta etiqueta impide que falle al no tener un web.xml que ya no 
						es obligatorio en servlet 3.0 -->
					<failOnMissingWebXml>false</failOnMissingWebXml>
					<!-- primera prioridad para el nombre del WAR -->
					<warName>miwebapp</warName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.2.10.v20150310</version>
				<configuration>
					<webApp>
						<contextPath>/${project.artifactId}</contextPath>
					</webApp>
					<scanIntervalSeconds>2</scanIntervalSeconds>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<id>enforcer-a-medida</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireProperty>
									<property>changelog.fileUri</property>
									<regex>.*\w.*</regex>
									<message>Por favor incluye la propiedad changelog.fileUri</message>
									<regexMessage>Por favor incluye la propiedad changelog.fileUri</regexMessage>
								</requireProperty>
							</rules>
						</configuration>
					</execution>

				</executions>
			</plugin>
		</plugins>
		<!-- mostrado como ejemplo, segunda prioridad para el nombre del WAR -->
		<finalName>miwebapp</finalName>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.8</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>summary</report>
							<report>cim</report>
							<report>index</report>
							<report>license</report>
							<report>project-team</report>
							<report>dependencies</report>
							<report>dependency-convergence</report>
							<report>issue-tracking</report>
							<report>scm</report>
							<report>modules</report>
							<report>plugins</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.2</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>dependency-updates-report</report>
							<report>plugin-updates-report</report>
							<report>property-updates-report</report>
						</reports>
					</reportSet>
				</reportSets>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changelog-plugin</artifactId>
				<version>${plugin.changelog}</version>
				<reportSets>
					<reportSet>
						<id>changelog</id>
						<configuration>
							<displayFileRevDetailUrl>${changelog.filerUri}</displayFileRevDetailUrl>
							<displayChangeSetDetailUrl>${changelog.revision.fileUri}</displayChangeSetDetailUrl>
							<headingDateFormat>dd-MM-yyyy</headingDateFormat>
							<outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
							<type>range</type>
							<range>120</range>
						</configuration>
						<reports>
							<report>changelog</report>
						</reports>
					</reportSet>

					<reportSet>
						<id>activty</id>
						<configuration>
							<displayFileDetailUrl>#</displayFileDetailUrl>
							<headingDateFormat>MM-dd-yyyy</headingDateFormat>
							<outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
							<type>range</type>
							<range>30</range>
						</configuration>
						<reports>
							<report>dev-activity</report>
							<report>file-activity</report>
						</reports>
					</reportSet>

				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<encoding>ISO-8859-1</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${plugin.surefire.report}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${plugin.jxr}</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>${plugin.taglist}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<aggregate>true</aggregate>
					<tagListOptions>
						<tagClasses>
							<tagClass>
								<displayName>Todos</displayName>
								<tags>
									<tag>
										<matchString>todo</matchString>
										<matchType>ignoreCase</matchType>
									</tag>
									<tag>
										<matchString>@todo</matchString>
										<matchType>ignoreCase</matchType>
									</tag>
								</tags>
							</tagClass>
							<tagClass>
								<displayName>Bugs</displayName>
								<tag>
									<matchString>fixme</matchString>
									<matchType>ignoreCase</matchType>
								</tag>
							</tagClass>
							<tagClass>
								<displayName>Deprecated Items</displayName>
								<tag>
									<matchString>@deprecated</matchString>
									<matchType>ignoreCase</matchType>
								</tag>
							</tagClass>

						</tagClasses>
					</tagListOptions>
				</configuration>

			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>${plugin.cobertura}</version>
				<configuration>
					<maxmem>1024m</maxmem>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<check>
						<lineRate>70</lineRate>
						<branchRate>70</branchRate>
						<totalLineRate>90</totalLineRate>
						<totalBranchRate>90</totalBranchRate>
						<haltOnFailure>false</haltOnFailure>
						<regexes>
							<regex>
								<pattern>es.adama</pattern>
								<branchRate>0</branchRate>
								<lineRate>0</lineRate>
							</regex>
						</regexes>
					</check>
					<instrumentation>
						<includes>
							<include>**/*.class</include>
						</includes>
						<excludes>
							<exclude>**/modelo/*.class</exclude>
						</excludes>
					</instrumentation>
				</configuration>

			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
				<version>2.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${plugin.checkstyle}</version>
				<configuration>
					<configLocation>${project.basedir}/code-analysis/checkstyle.xml</configLocation>
					<failsOnError>false</failsOnError>
					<enableRulesSummary>true</enableRulesSummary>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.4</version>
				<configuration>
					<targetJdk>1.5</targetJdk>
					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
					<rulesets>
						<ruleset>${project.basedir}/code-analysis/pmd.xml</ruleset>
					</rulesets>
					<linkXRef>true</linkXRef>
					<xrefLocation>${project.reporting.outputDirectory/xref}/</xrefLocation>
					<xrefTestLocation>${project.reporting.outputDirectory}/xref</xrefTestLocation>
					<failOnViolation>false</failOnViolation>
					<skipEmptyReport>false</skipEmptyReport>
				</configuration>
			</plugin>
		</plugins>
	</reporting>




	<profiles>
		<profile>
			<id>integration</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18.1</version>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.tomcat.maven</groupId>
						<artifactId>tomcat7-maven-plugin</artifactId>
						<version>2.1</version>
						<configuration>
							<path>/</path>
						</configuration>
						<executions>
							<execution>
								<id>start tomcat</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<inherited>false</inherited>
								<configuration>
									<fork>true</fork>
								</configuration>
							</execution>
							<execution>
								<id>stop-tomcat</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>shutdown</goal>
								</goals>
							</execution>

						</executions>
					</plugin>
				</plugins>
			</build>

		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.2</version>
		</dependency>

		<!-- Servlet API, JSTL -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- Dependencias de Logging -->

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<scope>compile</scope>
		</dependency>

		<!-- Dependencias Test unitarios -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.easytesting</groupId>
			<artifactId>fest-assert-core</artifactId>
			<version>2.0M10</version>
		</dependency>
	</dependencies>


</project>
